# cpp-nix-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  clean.sh  flake.nix  run.sh
